@@ -1,5 +1,7 @@
-use ExtUtils::MakeMaker;
 use strict;
+use warnings;
+use File::Spec;
+use Module::Build;
 
 # A makefile can be generated for either the C or Fortran version of
 # SLALIB. It does not yet determine the C/Fortran-ness of your library
@@ -52,8 +54,8 @@ if ($use_fortran == -1) {
     }
   }
 
-  # This assumes unix - Starlink only works on unix
-  my $lib = $StarConfig{Star_Lib} . "/libsla.a";
+  # Work out the library full path
+  my $lib = File::Spec->catfile($StarConfig{Star_Lib}, "libsla.a" );
 
   if (-e $lib) {
     print "Located Starlink SLALIB library in $StarConfig{Star_Lib}\n";
@@ -78,16 +80,16 @@ if ($use_fortran == -1) {
 
 
 # The #defines, libraries and any additional prerequisites
-my ($defines, $libs, %prereqs);
+my (@defines, $libs, %build_prereqs);
 if ($use_fortran) {
   print "Attempting to build against a Fortran SLALIB: $sla_lib\n";
 
   # Must switch modes
-  $defines = " -DUSE_FORTRAN";
+  push(@defines, "-DUSE_FORTRAN");
 
   # Must include fortran libraries but we do not want to force
   # ExtUtils::F77 on an unsuspecting C user
-  $prereqs{'ExtUtils::F77'} = 0;
+  $build_prereqs{'ExtUtils::F77'} = 0;
 
   # use eval here since we are listing ExtUtils as a prerequisite
   # anyway and so if this does not work we'll still get a message
@@ -98,7 +100,7 @@ if ($use_fortran) {
     print "Error determining Fortran library requirements\n";
   } else {
     $flibs = ExtUtils::F77->runtime;
-    $defines .= " -DHAS_UNDERSCORE"
+    push(@defines, "-DHAS_UNDERSCORE")
       if ExtUtils::F77->trail_;
   }
 
@@ -108,28 +110,43 @@ if ($use_fortran) {
   print "Attempting to build against a C SLALIB library: $sla_lib\n";
 
   # no special defines for the C version
-  $defines = '';
 
   # Just need the math library
   $libs = "$sla_lib -lm";
 }
 
-WriteMakefile(
-	      'NAME'      => 'Astro::SLA',
-	      'VERSION_FROM'   => 'SLA.pm',
-              'EXE_FILES' => [ 'stime' ],
-	      'LIBS'      => [ $libs ],
-	      'DEFINE'    => $defines,
-              'PREREQ_PM' => {
-			      'Test' => 0,
-			      'Pod::Usage' => 0,
-			      'Getopt::Long' => 0,
-			      %prereqs,
-			     },
-	      'INC'       => $sla_inc,
-	      'dist'      => { COMPRESS => "gzip -9f"},
-	      ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
-	       (ABSTRACT_FROM => 'SLA.pm',
-		AUTHOR     => 'Tim Jenness <t.jenness@jach.hawaii.edu>') : ()),
-	     );
+my $file = File::Spec->catfile( "lib", "Astro", "SLA.pm" );
+
+my $build = Module::Build->new
+  (
+   module_name => "Astro::SLA",
+   abstract_from => $file,
+   license => "gpl",
+   author => [
+              'Tim Jenness <tjenness@cpan.org>',
+             ],
+   version_from => $file,
+   meta_merge => {
+               resources =>  {
+                              repository => "git://github.com/timj/perl-Astro-SLA.git",
+                              homepage => "http://github.com/timj/perl-Astro-SLA/tree/master",
+                             },
+                },
+   script_files => [ qw/
+                         stime
+                       /],
+   requires => {
+                "Pod::Usage" => 0,
+                "Getopt::Long" => 0,
+               },
+   build_requires => {
+                      "Test::More" => 0,
+                      %build_prereqs,
+                     },
+   c_source => [ "src" ],
+   extra_compiler_flags => [$sla_inc, @defines],
+   extra_linker_flags => $libs,
+  );
+
+$build->create_build_script;
 
