@@ -1,3 +1,6 @@
+2010-12-30  Tim Jenness  <timj@poma.jach.hawaii.edu>
+
+	* Build.PL: Use Module::Build
 
 2007-07-24  Tim Jenness  <tjenness@cpan.org>
 
